--- a/render.yaml
+++ b/render.yaml
@@ -13,13 +13,13 @@ services:
       envVars:
           - key: PYTHONPATH
             value: ./src  
-          - key: BASENAME # Imported from Heroku app
+          - key: BASENAME 
             value: /
-          - key: FLASK_APP # Imported from Heroku app
+          - key: FLASK_APP 
             value: src/app.py
-          - key: FLASK_DEBUG # Imported from Heroku app
+          - key: FLASK_DEBUG 
             value: 0
-          - key: FLASK_APP_KEY # Imported from Heroku app
+          - key: FLASK_APP_KEY 
             value: "any key works"
           - key: PYTHON_VERSION
             value: 3.10.6
